[tool.poetry]
name = "pydivkit"
version = "3.0.1"
description = ""
authors = [
    "Vladislav Bakaev <bakaev-vlad@yandex-team.ru>",
    "Dmitry Orlov <mosquito@yandex-team.ru>"
]
include = ["pydivkit/div/*"]

[tool.poetry.dependencies]
python = "^3.8"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
mypy = "^0.931"
pylama = "^8.3.0"
pre-commit = "^2.17.0"
yesqa = "^1.3.0"
gray = "^0.10.2"
teamcity-messages = "^1.31"

[tool.mypy]
cache_dir = "/dev/null"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
