[project]
name = "pydivkit"
version = "32.38.0"
description = "DivKit python library"
readme = "README.md"
keywords = ["divkit", "sdk"]
requires-python = ">=3.9"
authors = [
    {name = "Vladislav Bakaev", email = "bakaev-vlad@yandex-team.ru"},
    {name = "Pavel Mosein", email = "p-mosein@yandex-team.ru"},
    {name = "Dmitry Orlov", email = "mosquito@yandex-team.ru"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/divkit/divkit/tree/main/json-builder/python"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.19",
]
test = [
    "pytest>=7.0.1",
    "pytest-asyncio>=0.18.1",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 90
extend-exclude = ["pydivkit/div"]

[tool.ruff.lint]
select = ["E", "F", "I", "COM818", "COM819"]

[tool.ruff.lint.isort]
known-first-party = ["pydivkit"]

[tool.mypy]
cache_dir = "/dev/null"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[tool.hatch.build.targets.wheel]
packages = ["pydivkit"]

[tool.hatch.build.targets.sdist]
exclude = [
    "env",
    "env*",
    ".venv",
    "venv",
    ".build",
    "*.egg-info",
    ".coverage",
    ".pytest_cache",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
