[package]
name = "divkit-json-builder"
version = "32.39.0-post2"
edition = "2021"
description = "Fast Rust-backed DivKit JSON builder with Python bindings"
license = "Apache-2.0"
repository = "https://github.com/Pavkazzz/divkit"

[lib]
name = "divkit_json_builder"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
pyo3 = { version = "0.28", features = ["extension-module"] }

[[bin]]
name = "bench"
path = "src/bench.rs"
