[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "divkit-rs"
version = "0.0.1"
description = "Fast Rust-backed DivKit JSON builder with Python bindings"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["divkit", "json", "builder", "ui", "layout", "rust", "sdui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/Pavkazzz/divkit"
Issues = "https://github.com/Pavkazzz/divkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "divkit_rs._native"
python-source = "python"
