[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "divkit-rs"
version = "32.39.0.post1"
description = "Fast Rust-backed DivKit JSON builder with Python bindings"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["divkit", "json", "builder", "ui", "layout", "rust", "sdui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff", "mypy", "pytest"]

[project.urls]
Repository = "https://github.com/Pavkazzz/divkit"
Issues = "https://github.com/Pavkazzz/divkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"python/divkit_rs/div.py" = ["F405"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "divkit_rs._pydivkit_compat"
disable_error_code = ["assignment", "arg-type", "var-annotated", "no-any-return", "index"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "divkit_rs._native"
python-source = "python"
